@@ -21,13 +21,12 @@ package org.apache.iceberg.connect.transforms;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public abstract class FileLoads {
-  protected static final String getFile(String fileName) throws IOException, URISyntaxException {
+  protected static String getFile(String fileName) throws IOException, URISyntaxException {
     URL jsonResource = FileLoads.class.getClassLoader().getResource(fileName);
-    return new String(Files.readAllBytes(Paths.get(jsonResource.toURI())), StandardCharsets.UTF_8);
+    return Files.readString(Paths.get(jsonResource.toURI()));
   }
 }
